# react-native-text-input-mask

./: package.json  tsconfig.json
harmony/: text_input_mask.rar
harmony/text_input_mask/: Index.ets  oh-package.json5  ts.ts
harmony/text_input_mask/src/main/: module.json5
harmony/text_input_mask/src/main/cpp/: CMakeLists.txt  RNTextInputMask.cpp  RNTextInputMask.h  RNTextInputMaskPackage.h
harmony/text_input_mask/src/main/cpp/common/: Compiler.h  FormatError.h  FormatSanitizer.h  Mask.h  RTLMask.h
harmony/text_input_mask/src/main/cpp/common/model/: AffinityCalculationStrategy.h  CaretString.h  CaretStringIterator.h  Next.h  Notation.h  RTLCaretStringIterator.h  State.h  common.h
harmony/text_input_mask/src/main/ets/: RNTextInputMaskPackage.ts  RNTextInputMaskTurboModle.ts
harmony/text_input_mask/src/ohosTest/: module.json5
src/: RNNativeTextInputMask.ts  index.harmony.ts  index.ts
